update base url

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ title                    : "SITC"
 title_separator          : "-"
 name                     : "SITC"
 description              : "DWB's Jekyll Website."
-url                      : "https://walkwithweb.com"
+url                      : "https://walkwithweb.com/walkwithweb.github.io"
 baseurl                  : ""
 repository               : "walkwithweb/walkwithweb.github.io"
