--- a/_config.yml
+++ b/_config.yml
@@ -41,8 +41,8 @@ incremental         : false
 detach              : false
 port                : 4000
 host                : 127.0.0.1
-url                 : walkwithweb.github.io
-baseurl             : /walkwithweb
+url                  : walkwithweb.github.io
+baseurl             : "" # does not include hostname
 show_dir_listing    : false
 
 # Outputting
