--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,10 @@ host                : 127.0.0.1
 baseurl             : "" # does not include hostname
 show_dir_listing    : false
 
+# domain: my-site.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
+# url: https://my-site.github.io  # the base hostname and protocol for your site, e.g. http://example.com
+# baseurl: /walkwithweb.github.io/      # place folder name if the site is served in a subfolder
+
 # Outputting
 permalink           : date
 paginate_path       : /page:num
