--- a/_data/projects/fr.yml
+++ b/_data/projects/fr.yml
@@ -3,7 +3,7 @@
   location: "Plateau-Mont-Royal, Montreal, QC"
   date: "Summer and Fall 2017"
   image: "/assets/images/projects/project1.png"
-  url: "project_1"
+  url: "project-1"
   fundings: "SSHRC-PDG grant"
   collaborators: "City of Montreal (Arrondissement Plateau-Mont-Royal)"
   name: "TERRASSES ROY"
@@ -39,7 +39,7 @@
     - url: ''
       name: 'Bocksteal 2019-ICSV 2019 paper '
   prev_url: ""
-  next_url: 'project_2'
+  next_url: 'project-2'
 
 
 - title: "English 1: English 1 NEW PUBLIC SPACE"
@@ -47,7 +47,7 @@
   location: "Plateau-Mont-Royal, Montreal, QC"
   date: "Summer and Fall 2017"
   image: "/assets/images/projects/project1.png"
-  url: "project_2"
+  url: "project-2"
   fundings: "SSHRC-PDG grant"
   collaborators: "City of Montreal (Arrondissement Plateau-Mont-Royal)"
   name: "TERRASSES ROY"
@@ -80,15 +80,15 @@
   publications:
     - url: ''
       name: 'Bocksteal 2019-ICSV 2019 paper '
-  prev_url: "project_1"
-  next_url: ''
+  prev_url: "project-1"
+  next_url: 'project-3'
 
 - title: "English ROY: English A NEW PUBLIC SPACE"
   description: "A pedestrianization in the heart of the Plateau-Mont-Royal."
   location: "Plateau-Mont-Royal, Montreal, QC"
   date: "Summer and Fall 2017"
   image: "/assets/images/projects/project1.png"
-  url: "project_1"
+  url: "project-3"
   fundings: "SSHRC-PDG grant"
   collaborators: "City of Montreal (Arrondissement Plateau-Mont-Royal)"
   name: "TERRASSES ROY"
@@ -123,8 +123,8 @@
   publications:
     - url: ''
       name: 'Bocksteal 2019-ICSV 2019 paper '
-  prev_url: ""
-  next_url: 'project_2'
+  prev_url: 'project-2'
+  next_url: 'project-4'
 
 
 - title: "English 1: English 1 NEW PUBLIC SPACE"
@@ -132,7 +132,7 @@
   location: "Plateau-Mont-Royal, Montreal, QC"
   date: "Summer and Fall 2017"
   image: "/assets/images/projects/project1.png"
-  url: "project_2"
+  url: "project-4"
   fundings: "SSHRC-PDG grant"
   collaborators: "City of Montreal (Arrondissement Plateau-Mont-Royal)"
   name: "TERRASSES ROY"
@@ -165,5 +165,5 @@
   publications:
     - url: ''
       name: 'Bocksteal 2019-ICSV 2019 paper '
-  prev_url: "project_1"
+  prev_url: "project-3"
   next_url: ''
