added eng/fr texts, new projects, updated images

--- a/_data/team/en.yml
+++ b/_data/team/en.yml
@@ -3,47 +3,59 @@ staff:
   members:
     - name: "Catherine Guastavino"
       role: "Principal Investigator"
-      image: "/assets/images/team/1.png"
-      info: "Cynthia Tarlao is a researcher working on the integration of sound in urban planning practice. Her work focuses on assessing how professionals of the urban environment take sound into consideration in planning and designing the city, and on developing tools to help them do this beyond regulatory requirements. Currently, she is working on topics of public policy and urban densification around the question of noise and sound with the goal of bringing together a breadth of perspectives towards equity and sustainability in city planning. She is also the main English/French translator for Sounds in the City. "
+      image: "/assets/images/team/Catherine_Guastavino-RC3_Square.jpg"
+      info: "Catherine Guastavino is a Professor at McGill University and a member of the Centre for Interdisciplinary Research in Music Media and Technology (CIRMMT). She happily leads the Sounds in the City partnership and enjoys working with diverse academics, professionals, artists, and citizens to rethink the role of sound in cities. She also co-direct the thematic network AIRS (Air, Intersectiorialité, recherche Respiratoire et Sonore). She has published extensively on urban soundscapes, sensory experience, auditory perception, and music psychology. She also has extensive experience collaborating with industry partners, cultural institutions, as well as with municipal and provincial governments. "
     - name: "Josée Laplace"
       role: "Researcher"
-      image: "/assets/images/team/2.png"
-      info: "Cynthia Tarlao is a researcher working on the integration of sound in urban planning practice. Her work focuses on assessing how professionals of the urban environment take sound into consideration in planning and designing the city, and on developing tools to help them do this beyond regulatory requirements. Currently, she is working on topics of public policy and urban densification around the question of noise and sound with the goal of bringing together a breadth of perspectives towards equity and sustainability in city planning. She is also the main English/French translator for Sounds in the City. "
-    - name: "Catherine Guastavino"
-      role: "Principal Investigator"
-      image: "/assets/images/team/3.png"
-      info: "Cynthia Tarlao is a researcher working on the integration of sound in urban planning practice. Her work focuses on assessing how professionals of the urban environment take sound into consideration in planning and designing the city, and on developing tools to help them do this beyond regulatory requirements. Currently, she is working on topics of public policy and urban densification around the question of noise and sound with the goal of bringing together a breadth of perspectives towards equity and sustainability in city planning. She is also the main English/French translator for Sounds in the City. "
-    - name: "Josée Laplace"
+      image: "/assets/images/team/Joseepic2.jpg"
+      info: "Josée Laplace is a researcher trained in urban planning (PhD in Urban Studies), concerned in bettering the experience of the built environment. Her work lies in particular at the intersection of soundscapes and urban heritage. She has developed methods to characterize places ambiances through sensory experience, with the aim of informing projects or programs of urban revalorization. "
+    - name: "Nicola Di Croce"
       role: "Researcher"
-      image: "/assets/images/team/4.png"
-      info: "Cynthia Tarlao is a researcher working on the integration of sound in urban planning practice. Her work focuses on assessing how professionals of the urban environment take sound into consideration in planning and designing the city, and on developing tools to help them do this beyond regulatory requirements. Currently, she is working on topics of public policy and urban densification around the question of noise and sound with the goal of bringing together a breadth of perspectives towards equity and sustainability in city planning. She is also the main English/French translator for Sounds in the City. "
-    - name: "Catherine Guastavino"
-      role: "Principal Investigator"
-      image: "/assets/images/team/5.png"
-      info: "Cynthia Tarlao is a researcher working on the integration of sound in urban planning practice. Her work focuses on assessing how professionals of the urban environment take sound into consideration in planning and designing the city, and on developing tools to help them do this beyond regulatory requirements. Currently, she is working on topics of public policy and urban densification around the question of noise and sound with the goal of bringing together a breadth of perspectives towards equity and sustainability in city planning. She is also the main English/French translator for Sounds in the City. "
-    - name: "Josée Laplace"
+      image: "/assets/images/team/Nicola.jpg"
+      info: "Nicola Di Croce is a researcher and sound artist. He holds a PhD in Regional Planning and Public Policies from Università Iuav di Venezia and was a Marie Sklodowska-Curie Fellow at Iuav and McGill University. His research deals with the relationship between Urban Studies and Sound Studies; he is interested in collaborative and participatory approaches to urban policy analysis and design. He considers relational sound art practice and sound-oriented methodologies as meaningful tools to support the investigation of urban and cultural transformations, as well as to improve the livability and inclusiveness of public space and promote social change."
+    - name: "Cynthia Tarlao"
       role: "Researcher"
-      image: "/assets/images/team/6.png"
-      info: "Cynthia Tarlao is a researcher working on the integration of sound in urban planning practice. Her work focuses on assessing how professionals of the urban environment take sound into consideration in planning and designing the city, and on developing tools to help them do this beyond regulatory requirements. Currently, she is working on topics of public policy and urban densification around the question of noise and sound with the goal of bringing together a breadth of perspectives towards equity and sustainability in city planning. She is also the main English/French translator for Sounds in the City. "
-    - name: "Catherine Guastavino"
-      role: "Principal Investigator"
-      image: "/assets/images/team/2.png"
-      info: "Cynthia Tarlao is a researcher working on the integration of sound in urban planning practice. Her work focuses on assessing how professionals of the urban environment take sound into consideration in planning and designing the city, and on developing tools to help them do this beyond regulatory requirements. Currently, she is working on topics of public policy and urban densification around the question of noise and sound with the goal of bringing together a breadth of perspectives towards equity and sustainability in city planning. She is also the main English/French translator for Sounds in the City. "
-    - name: "Josée Laplace"
+      image: "/assets/images/team/Cynthia_Tarlao-RC3red-square.jpg"
+      info: "Cynthia Tarlao is a researcher working on the integration of sound in urban planning practice. Her work focuses on assessing how professionals of the urban environment take sound into consideration in planning and designing the city, and on developing tools to help them do this beyond regulatory requirements. Currently, she is working on topics of public policy and urban densification around the question of noise and sound with the goal of bringing together a breadth of perspectives towards equity and sustainability in city planning. She is also the main English/French translator for Sounds in the City."
+    - name: "Edda Bild"
       role: "Researcher"
-      image: "/assets/images/team/1.png"
-      info: "Cynthia Tarlao is a researcher working on the integration of sound in urban planning practice. Her work focuses on assessing how professionals of the urban environment take sound into consideration in planning and designing the city, and on developing tools to help them do this beyond regulatory requirements. Currently, she is working on topics of public policy and urban densification around the question of noise and sound with the goal of bringing together a breadth of perspectives towards equity and sustainability in city planning. She is also the main English/French translator for Sounds in the City. "
+      image: "/assets/images/team/Edda-Bild.jpg"
+      info: "Edda Bild is a soundscape researcher and educator with over 10 years of experience in working on urban soundscapes and their relationship to public and private space use, in various European and North American contexts. She has developed and tested ways of documenting the urban auditory experience and of improving it in practice through intentional urban design and planning, with a strong focus on participatory approaches. Her interest lies in knowledge mobilization and communication, by educating urban stakeholders and the larger public on soundscape and promoting the idea of sound awareness as a resource."
+    - name: "Christopher Trudeau"
+      role: "Researcher"
+      image: "/assets/images/team/Chris_Trudeau.jpg"
+      info: "Christopher Trudeau is a sound and noise researcher with an interest in the social inequalities in long-term sonic environments, as well as popular attitudes toward urban noise. He’s been with the Sounds in the City team since 2017 working on projects that deal with sound-related issues in urban design (Fleurs de Macadam; Plateau-Mont-Royal) and the cohabitation between activities (ÉcoutezMTL; Downtown Montreal)."
+    - name: "Richard Yanaky"
+      role: "Researcher"
+      image: "/assets/images/team/richard2_small.jpg"
+      info: "Richard Yanaky is helping professionals by leading the research and development of a new immersive sound planning tool, City Ditty. City Ditty aims to introduce a new generation of professionals to soundscape design by helping raise their sound-awareness, teach them soundscape design principles, and support them in the creation of their own soundscapes in a fully navigable and immersive 3D environment via Virtual Reality or desktop PC. He hopes that through empowering more people through simple-to-use technology, more people will be able to contribute to creating healthier and enjoyable cities. City soundscapes are complex but talking about them needn’t be! This work is supported by Richard’s mixed background in information studies, computer science, psycholinguistics, and many years as a college and university instructor."
+    - name: "Ezra J. Teboul"
+      role: "Researcher"
+      image: "/assets/images/team/ezra2.png"
+      info: "Ezra J. Teboul is a Sephardic artist and researcher. Their current project is focused on ways in cellists perceive unusual cello performance techniques in the work of Helmut Lachenman, a contemporary composer. Their personal projects focus currently on reverse engineering, the reimplementation of artistic technical systems, and the history of electricity and electronics, especially in the way that engineers and mathematicians participated in the rise of mass manufacturing and the commodity form. For the past decade, they were an ethnographer of DIY electronic music instruments and artistic communities."
+    - name: "Daniel Steele"
+      role: "Researcher"
+      image: "/assets/images/team/DanSteele.jpg"
+      info: "Daniel Steele is a founding member of Sounds in the City and an urban experience researcher. With well over 10 years of experience, he found his way into this research by way of his work on hearing aids. He is concerned with how people live, work, and play in cities and, equally importantly, how insights from this research can be used in urban planning and decision making about the public realm. He currently works for the City of Boston as a Principal Research Advisor at the Planning Advisory Council."
+    - name: "Valérian Fraisse"
+      role: "Researcher"
+      image: "/assets/images/team/Valerian-Fraisse.jpg"
+      info: "Valérian Fraisse is a soundscape researcher working at the intersection of art and science. He collaborates with sound artists both in Paris and Montréal to study the impact of sound installations in urban public spaces. He is currently working on a methodology to help sound artists in their composition process. The methodology includes acoustic measurements, laboratory and in situ soundscape evaluations to assist creation based on space users’ feedback. As part of this work, he developed a soundscape simulation tool that allows for the evaluation of sound installation prototypes prior to their deployment on site."
+    - name: "Chang Miao"
+      role: "Researcher"
+      image: "/assets/images/team/Chang.png"
+      info: "Chang Miao is a soundscape researcher focused on human perception and behavior within urban public spaces. Her research investigates the effect of music performances on the quality of urban public space experiences, incorporating perspectives of urban public space design. The innovative use of the \"City Ditty\" soundscape simulator in her methodology enables precise analysis of the auditory influences on public life, highlighting the impact of sound design in urban planning and architecture."
+    - name: "Negar Imani"
+      role: "Researcher"
+      image: "/assets/images/team/Negar.jpg"
+      info: "Negar Imani has a background in Urban Planning and Design. In her PhD, she works at the intersection of Urban Soundscapes, Participatory GIS, and Walkable Access to Urban Green Spaces. She aims to study walkable access to local green spaces and its impact on residents’ everyday soundscapes. During her Masters, she worked on the effect of sounds in promoting the Sense of Place in an Urban Green Space. She has also had experience in urban planning and design projects on different levels, from neighbourhood to city scale."
 alumni:
   title: "ALUMNI"
   members:
-    - name: "Edda Bild"
+    - name: "Ulysse Lefeuvre"
       role: "Soundscape Researcher"
       image: "/assets/images/team/1.png"
-      info: "Cynthia Tarlao is a researcher working on the integration of sound in urban planning practice. Her work focuses on assessing how professionals of the urban environment take sound into consideration in planning and designing the city, and on developing tools to help them do this beyond regulatory requirements. Currently, she is working on topics of public policy and urban densification around the question of noise and sound with the goal of bringing together a breadth of perspectives towards equity and sustainability in city planning. She is also the main English/French translator for Sounds in the City. "
-    - name: "Josée Laplace"
-      role: "Researcher"
-      image: "/assets/images/team/2.png"
-      info: "Cynthia Tarlao is a researcher working on the integration of sound in urban planning practice. Her work focuses on assessing how professionals of the urban environment take sound into consideration in planning and designing the city, and on developing tools to help them do this beyond regulatory requirements. Currently, she is working on topics of public policy and urban densification around the question of noise and sound with the goal of bringing together a breadth of perspectives towards equity and sustainability in city planning. She is also the main English/French translator for Sounds in the City. "
+      info: "Ulysse Lefeuvre is a student at Sorbonne University in Paris and at IRCAM. He is doing an internship at McGill University with Professor Catherine Guastavino on auditory motion perception."
 collaborators:
   title: "COLLABORATORS"
   members:
