updated papers likks

--- a/_data/papers/en.yml
+++ b/_data/papers/en.yml
@@ -5,7 +5,7 @@
       description: "Journal of Urban Design, 201"
       date: "2020-12-10"
       link:
-        url: ""
+        url: "https://www.tandfonline.com/doi/full/10.1080/13574809.2019.1699399"
         name: "10.1080/13574809.2019.1699399"
       authors:
         - name: 'Daniel Steele'
@@ -39,7 +39,7 @@
       description: "Journal Métro"
       date: "2020-12-10"
       link:
-        url: ""
+        url: "https://www.tandfonline.com/doi/full/10.1080/13574809.2019.1699399"
         name: "10.1080/13574809.2019.1699399"
       authors:
         - name: 'Machillot. C'
